# mvis

./: .gitignore  AGENTS.md  Cargo.toml  README.md  REF.md  config.toml  fix_sliders.py  flake.nix  justfile
assets/shaders/: instanced.wgsl  physics.wgsl
packaging/arch/: PKGBUILD
src/: audio_analysis.rs  components.rs  config.rs  gpu_pipeline.rs  instanced_render.rs  lib.rs  main.rs  mpd_client.rs  params.rs  physics.rs  spatial_hash.rs  spawner.rs  test_bevy.rs
